# ProyectoTeoriaBD

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
backend/src/app/: main.cpp
backend/src/dao/: CategoriaDAO.cpp  CategoriaDAO.h  MetaAhorroDAO.cpp  MetaAhorroDAO.h  ObligacionFijaDAO.cpp  ObligacionFijaDAO.h  PresupuestoDAO.cpp  PresupuestoDAO.h  PresupuestoDetalleDAO.cpp  PresupuestoDetalleDAO.h  SubcategoriaDAO.cpp  SubcategoriaDAO.h  TransaccionDAO.cpp  TransaccionDAO.h  UsuarioDAO.cpp  UsuarioDAO.h
backend/src/database/: DBManager.cpp  DBManager.h
backend/src/models/: Categoria.h  MetaAhorro.h  ObligacionFija.h  Presupuesto.h  PresupuestoDetalle.h  Subcategoria.h  Transaccion.h  Usuario.h
database/DDL/: DDL.sql  presupuesto.sql
database/datos_prueba/: insertar_datos.sql
database/funciones/: frunciones.sql  funciones.sql
database/procedimientos/: FuncionesRequeridas.sql  Triggers.sql  crud.sql  crud_categoria.sql  crud_meta_ahorro.sql  crud_obligacion_fija.sql  crud_presupuesto.sql  crud_presupuesto_detalle.sql  crud_subcategoria.sql  crud_transaccion.sql  crud_usuario.sql  logica_negocio.sql
database/triggers/: Triggers.sql  triggers.sql
docs/: Diccionario de Datos.xlsx
frontend/src/gui/: CategoriaDialog.cpp  CategoriaDialog.h  CategoriaSubcategoriaWidget.cpp  CategoriaSubcategoriaWidget.h  MainWindow.cpp  MainWindow.h  MetaAhorroDialog.cpp  MetaAhorroDialog.h  MetaAhorroWidget.cpp  MetaAhorroWidget.h  ObligacionFijaDialog.cpp  ObligacionFijaDialog.h  ObligacionFijaWidget.cpp  ObligacionFijaWidget.h  PresupuestoDetalleDialog.cpp  PresupuestoDetalleDialog.h  PresupuestoDialog.cpp  PresupuestoDialog.h  PresupuestoWidget.cpp  PresupuestoWidget.h  SubcategoriaDialog.cpp  SubcategoriaDialog.h  TransaccionDialog.cpp  TransaccionDialog.h  TransaccionWidget.cpp  TransaccionWidget.h  UsuarioDialog.cpp  UsuarioDialog.h  UsuarioWidget.cpp  UsuarioWidget.h
